# etchit

./: .gitignore  README.md  THIRD_PARTY.md  build.gradle.kts  settings.gradle.kts
ant-sdk/: .gitignore  README.md
ant-sdk/.reference-source/: Cargo.toml.ant-ffi  Cargo.toml.workspace  client.rs  data.rs
ant-sdk/ffi/: .gitignore
ant-sdk/ffi/rust/: rust-toolchain.toml
ant-sdk/ffi/rust/ant-ffi/: Cargo.toml
ant-sdk/ffi/rust/ant-ffi/src/: client.rs  lib.rs  wallet.rs
app/: build.gradle.kts
app/src/debug/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/java/com/autonomi/antpaste/: BackupCrypto.kt  ContentDetector.kt  EtchHistory.kt  EtchitApplication.kt  KeepAliveService.kt  MainActivity.kt  OperationHelper.kt  PasteUtils.kt  PrivateDataStore.kt  Terms.kt
app/src/main/java/uniffi/ant_ffi/: ant_ffi.kt
app/src/main/jniLibs/arm64-v8a/: SYMBOLS.reference.txt
app/src/main/res/drawable/: address_chip_bg.xml  attach_icon.xml  code_bg.xml  gradient_button.xml  input_bg.xml  input_bg_focused.xml  input_selector.xml  settings_icon.xml  status_dot.xml
app/src/main/res/layout/: activity_main.xml  dialog_settings.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  full_backup_content.xml
docs/: FFI_BUILD.md  library-format-v1.md
local-maven/: README.md
local-maven/com/reown/android-core/1.6.12/: android-core-1.6.12.aar  android-core-1.6.12.module  android-core-1.6.12.pom
scripts/: build-ffi.sh
tools/: README.md  decode.html  decode.py  library.html  library.py
(+12 files in other folders)
